# DQM4ILC

./: .gitignore  CMakeLists.txt
scripts/: dns_script.sh  install_ilcsoft.sh  manual_kill.sh  manual_start.sh  streamfiles.sh
scripts/templates/: RunControl_center.xml  monitor_AHCAL_Telescope_Correlations.xml  monitor_Maps.xml
source/: CMakeLists.txt
source/AHCAL_BIF/: CMakeLists.txt
source/AHCAL_BIF/AHCAL/: CMakeLists.txt
source/AHCAL_BIF/AHCAL/Channels/: Testbeam.cc  Testbeam.h  lcio15channelsX4.xml
source/AHCAL_BIF/AHCAL/ElectronicsMapping/maps/JulyAugust2016/: geometrymap_airstack.xml
source/AHCAL_BIF/AHCAL/ElectronicsMapping/scripts/: geometry_layer1.txt  geometry_layer8.txt  modifymap.sh
source/AHCAL_BIF/AHCAL/Layers/: AHCAL_15Layers.cc  AHCAL_15Layers.h  AHCAL_40Layers.cc  AHCAL_40Layers.h  AHCAL_96Layers.cc  AHCAL_96Layers.h  lcioTestbeam.xml
source/AHCAL_BIF/BIF/: CMakeLists.txt
source/AHCAL_BIF/BIF/FindOffset/: FindOffset.cc  lcioTimeCorrelation.xml
source/AHCAL_BIF/BIF/PlotCorrelations/: TimeCorrelation.cc  TimeCorrelation.h  lcioTimeCorrelation.xml
source/AHCAL_BIF/scripts/: Geometry_2018June.xml  Geometry_2018May.xml  Geometry_2018October.xml  Geometry_2019May.xml  Telescope_hitmaps_201905.xml  canvases.xml  canvases_2018October.xml  display_canvases1.xml  dqm_kill.sh  dqm_start.sh  generate_canvases.sh  generate_geometry.sh  hotpixelmap_azalea_201905.xml  hotpixelmap_azalea_201905_level001.xml  lcioTestbeam201805.xml  lcioTestbeam201806.xml  lcioTestbeam201810.xml  lcioTestbeam201905.xml  print_geometry.sh
source/AHCAL_EUDETtelescope/: CMakeLists.txt
source/AHCAL_EUDETtelescope/GeomCorrelations/: Correlations.cc  Correlations.cc~  Correlations.h  lcioTelescopeCorrelations.xml  lcioTelescopeCorrelations.xml~
source/EUDETtelescope/: CMakeLists.txt  EUDETtelescope.cc  EUDETtelescope.h  lcioEUDETtelescope.xml
source/EUDETtelescope/hitmaps/: EUDETtelescopeHitMaps.cc  EUDETtelescopeHitMaps.h  lcioEUDETtelescopeHitMaps.xml
source/EUDETtelescope/hotpixels/: EUDETtelescopeHotPixels.cc  EUDETtelescopeHotPixels.h  hotpixelsmap.xml  hotpixelsmap_05.xml  lcioEUDETtelescopeHotPixel.xml
source/examples/: CMakeLists.txt
source/examples/AHCALRawModule/: calice_local.json  calice_local_test.json  jobinit.sh
source/examples/AHCALRawModule/4Channels/: AHCALRawModuleChannel.cc  AHCALRawModuleChannel.h  AHCALRawModuleChannel.h~  lcioAHCALTestsChannel.xml  lcioAHCALTestsChannel.xml~
source/examples/AHCALRawModule/ElectronicsMapping/: ElectronicsMapping.cc  MapFunctionsStorage.cc  Test.cc  Test2.cc  geometry_layer1.txt  geometry_layer10.txt  geometry_layer11.txt  geometry_layer12.txt  geometry_layer13.txt  geometry_layer14.txt  geometry_layer15.txt  geometry_layer2.txt  geometry_layer3.txt  geometry_layer4.txt  geometry_layer5.txt  geometry_layer6.txt  geometry_layer7.txt  geometry_layer8.txt  geometry_layer9.txt  geometrymap.xml  geometrymap_airstack.xml  geometrymap_airstack.xml_bk  modifymap.sh  test.txt
source/examples/AHCALRawModule/Global/: #lcioAHCALTestsChannel.xml#  .#lcioAHCALTestsChannel.xml  AHCALRawModuleGlobal.cc  AHCALRawModuleGlobal.cc~  AHCALRawModuleGlobal.h  AHCALRawModuleGlobal.h~  lcioAHCALTestsGlobal.xml  lcioAHCALTestsGlobal.xml~
source/examples/AHCALRawModule/Old/: #lcioAHCALTestsGlobal.xml#  AHCALRawModuleChannel.cc  AHCALRawModuleChannel.h  AHCALRawModuleGlobal.cc  AHCALRawModuleGlobal.h  lcioAHCALTestsChannel.xml  lcioAHCALTestsChannel_2.xml  lcioAHCALTestsGlobal.xml
source/examples/AHCALRawModule/Older/: #run_test.sh#  AHCALRawModule.cc~  AHCALRawModule.h~  AHCALRawModuleNew.cc~  AHCALRawModule_old.cc  AHCALRawModule_vec.cc  CMakeCache.txt  calice_local.json~  dnsinit.sh  init-old.sh~  jobinit.sh~  lcioAHCALTests.xml~  lcioAHCALTests_ch.xml~  run_local.sh  run_test.sh
source/examples/AHCALRawModule/T0/: AHCALRawModuleT0.cc  AHCALRawModuleT0.cc_backup  AHCALRawModuleT0.h  AHCALRawModuleT0.h~  lcioAHCALT0.xml  lcioAHCALT0.xml~
source/examples/AHCALRawModule/TestbeamJuly2016_15channels/: Testbeam.cc  Testbeam.cc_bk  Testbeam.h  Testbeam.h_bk  lcio15channelsX4.xml  lcio15channels_1.xml  lcio15channels_2.xml  lcio15channels_3.xml  lcio15channels_4.xml
source/examples/AHCALRawModule/TestbeamJuly2016_Hitmaps/: HitMap.cc  HitMap.h  HitMapTemperature.cc  HitMapTemperature.cc~  HitMapTemperature.h  HitMapTemperature.h~  Testbeam.cc  lcioHitMap.xml  lcioHitMapTemperature.xml
source/examples/AHCALRawModule/TestbeamJuly2016_Temperature/: Temperature.cc  Temperature.h  lcioTemperature.xml
source/examples/AHCALRawModule/TestbeamMay2016_3HBU/: Testbeam.cc  Testbeam.cc~  Testbeam.h  lcioTesbeam.xml  lcioTesbeam.xml~
source/examples/AHCALRawModule/TestbeamMay2016_PowerPulsing/: Testbeam.cc  Testbeam.cc~  Testbeam.h  Testbeam.h~  lcioTesbeamPowerPulsing.xml  lcioTesbeamPowerPulsing.xml~
source/examples/AHCAL_BIF_EventBuildingModule/: TimeCorrelation.cc  TimeCorrelation.cc~  TimeCorrelation.h  TimeCorrelation.h~  lcioTimeCorrelation.xml  lcioTimeCorrelation.xml~
source/examples/AHCAL_BIF_EventBuildingModule/FindOffset/: FindOffset.h
source/examples/AHCAL_BIF_EventBuildingModule/PlotCorrelations/: TimeCorrelation.cc  TimeCorrelation.cc~  TimeCorrelation.h  TimeCorrelation.h~  lcioTimeCorrelation.xml  lcioTimeCorrelation.xml~
